# personal-briefing-engine

./: .gitignore  README.ja.md  README.md  package.json  pyproject.toml
_docs/: 00-overview.md  01-competitive-research.md  01-product-thesis.md  02-product-requirements.md  02-system-architecture.md  03-architecture.md  03-trigger-model.md  04-collection-and-connectors.md  04-connectors-and-ingestion.md  05-synthesis-ranking-and-suppression.md  05-x-timeline-diff.md  06-implementation-plan.md  06-output-delivery-and-actions.md  07-references.md  07-state-memory-and-audit.md  08-roadmap.md  10-appendix-legacy-research.md  2026-04-16-proactive-life-agent-architecture.md  README.md
_docs/source-notes/: feeds-and-source-registry.md
runtime_inputs/: production_hermes_history.json  production_notes.md
tests/: test_chatgpt_exporter.py  test_cli_morning_digest.py  test_codex_cli_summarizer.py  test_codex_summarizer.py  test_collection.py  test_db.py  test_delivery_local_markdown.py  test_direct_delivery.py  test_end_to_end_morning_digest.py  test_feed_connector.py  test_feed_update_escalation.py  test_google_calendar_connector.py  test_grok_exporter.py  test_identity_metadata.py  test_known_source_search.py  test_launchd_integration.py  test_leave_now_warning.py  test_local_connectors.py  test_location_context_connector.py  test_location_dwell.py  test_location_dwell_live.py  test_location_walk.py  test_location_walk_live.py  test_models.py  test_rendering.py  test_source_registry.py  test_state_runtime.py  test_trigger_registry.py  test_x_oauth2.py  test_x_url_connector.py
(+44 files in other folders)
